# MagicBox

./: .gitignore  CMakeLists.txt  Cargo.toml  Main.swift  Package.swift  README.md  meson.build  test.cpp
.run/: MagicBox.run.xml
Wayland/: Package.swift  README.md  header.h  module.modulemap
WaylandClient/: Package.swift
WaylandClient/Sources/WaylandClient/: WaylandClient.swift
WaylandClient/Tests/WaylandClientTests/: WaylandClientTests.swift
src/: MBApp.cpp  MBApp.h  MBTopBar.cpp  MBTopBar.h  MBWindow.cpp  MBWindow.h  Makefile  compile_flags.txt  cursor.c  cursor.h  keyboard.c  keyboard.h  main.c  main.cpp  main.rs  server.c  server.h  server.rs  tinywl.c  view.c  view.h  xdg-shell-protocol.h
src/client/: MBCompositor.cpp  MBCompositor.h  MBDisplay.cpp  MBDisplay.h  MBRegistry.cpp  MBRegistry.h
